# my-gd-collab-mod.

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
